<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_bg"
            android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        tools:context="mosamimon.com.mosamimon.view.MainActivity">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/qr_line1"
            android:textColor="#000"
            android:textSize="24dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/qr_line2"
            android:textColor="#000"
            android:textSize="20dp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/qrCapture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_shape"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_camera_24dp"
            android:padding="15dp"
            android:text="@string/qr_btn_text"
            android:textColor="#fff"
            android:textSize="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/qr_line3"
            android:textColor="#000"
            android:textSize="24dp"
            android:textStyle="normal"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/qrCode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_shape"
            android:hint="@string/qr_code_hint"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/qrSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/login_shape"
            android:text="@string/qr_code_last_btn"
            android:textColor="#fff"
            android:textSize="24dp"/>

        <TextView
            android:id="@+id/webLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/web_link"
            android:textColor="#000"
            android:textSize="12dp"
            android:textStyle="normal"/>
    </LinearLayout>
</ScrollView>