<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/login_bg"
                tools:context="mosamimon.com.mosamimon.view.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:id="@+id/loginContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_box_shape"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/helvetica_neuelt_arabic_bold"
            android:text="@string/login_header"
            android:textColor="#000"
            android:textSize="20dp"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/edittext_shape"
            android:fontFamily="@font/helvetica_neuelt_arabic_roman"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:text=""
            android:textCursorDrawable="@null"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/edittext_shape"
            android:fontFamily="@font/helvetica_neuelt_arabic_roman"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:text=""
            android:textCursorDrawable="@null"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/login_shape"
            android:clickable="true"
            android:fontFamily="@font/helvetica_neuelt_arabic_roman"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="20dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/webLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/web_link"
        android:textColor="#000"
        android:textSize="12dp"
        android:textStyle="normal"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/progress"
        android:visibility="gone"/>
</RelativeLayout>
